Add bug fix for comment form not displaying

--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -103,13 +103,14 @@
                 <div class="alert alert-success" role="alert">
                     Your Comment is awaiting approval
                 </div>
+                {% else %}
                 {% if user.is_authenticated %}
 
                 <h3>Leave a comment:</h3>
                 <p>Posting as: {{ user.username }}</p>
                 <form method="post" style="margin-top: 1.3em;">
                     {{ comment_form | crispy }}
-                    {% csrf_token %
+                    {% csrf_token %}
                     <button type="submit" class="btn btn-signup btn-lg">Submit</button>
                 </form>
 
