--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -103,6 +103,12 @@
                 <div class="alert alert-success" role="alert">
                     Your Comment is awaiting approval
                 </div>
+                <!-- {% for message in messages %}
+                <div class="alert {{ message.tags }} alert-dismissible fade show" id="msg" role="alert">
+                {{ message | safe }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+                {% endfor %} -->
                 {% else %}
                 {% if user.is_authenticated %}
 
